# test-ocr-models

./: .dockerignore  .env.sample  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  run-gpu.sh  run_baseline.py  run_preprocessing.py  run_qwen.py  run_test.sh
docs/: azure_postprocessing.md  extract_texts_plan.md  upstage_postprocessing.md  yomitoku_layout_postprocessing.md  yomitoku_postprocessing.md
html_visualization_datatang/: ocr_results.txt
notebook/: calc_time_results.ipynb  create_gt_dataset.ipynb  evaluate_layout_accuracy_20251202.ipynb  evaluate_layout_accuracy_20251212.ipynb  evaluate_ocr_accuracy.ipynb  evaluate_ocr_accuracy_20251213.ipynb  evaluate_ocr_accuracy_20251214.ipynb  preprocessing.ipynb  run_document_parse.ipynb  run_test_baseline.ipynb  test_paddleVL.ipynb
scripts/: docker-run.bat  docker-run.ps1  docker-run.sh
src/: __init__.py  config.py  preprocessing.py  run_azure.py  run_baseline.py  run_claude.py  run_gemini.py  run_models.py  run_postprocess.py  run_postprocess_azure.py  run_postprocess_upstage.py  run_preprocessing.py  run_qwen.py  run_selected.py  run_upstage.py  run_yomitoku.py
src/models/: __init__.py  azure_di.py  claude.py  gemini.py  qwen.py  upstage.py  yomitoku.py
src/models/azure/: __init__.py  layout.py  ocr.py
src/models/claude/: __init__.py  layout.py  ocr.py
src/models/gemini/: __init__.py  layout.py  ocr.py
src/models/qwen/: __init__.py  common.py  layout.py  ocr.py
src/models/upstage/: __init__.py  layout.py  ocr.py
src/models/yomitoku/: __init__.py  layout.py  ocr.py
src/postprocess/: __init__.py  generic_ocr.py  yomitoku_layout.py  yomitoku_ocr.py
src/preprocess/: __init__.py  deskew.py  pdf.py
src/utils/: __init__.py  aggregate_ocr_texts.py  device.py  etl_extractor.py  file_utils.py  html_utils.py  logging.py  process_by_category.py  timing.py
tests/: conftest.py  test_config.py  test_model_functions.py  test_model_imports.py
